[#11607] Update back-end dependencies (#11608)
* Update Gradle to 7.4

* Update lint tools to latest

* Fix newly flagged lint issues

* Fix deprecated code usages

* Fix deprecated java 5-7 practices

* Copy full implementation of readExternal from time.zone classes

* Update non-GCP dependencies to latest

* Update GCP dependencies to latest